--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,17 @@ typings/
 # dotenv environment variables file
 .env
 
+# testing
+/coverage
+
+# production
+/build
+/dist
+/.next
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
